# runner/gateway.openapi.yaml
@@ -1027,6 +1027,16 @@ components:
           title: Params
           description: Initial parameters for the pipeline.
           default: {}
+        gateway_request_id:
+          type: string
+          title: Gateway Request Id
+          description: ' The ID of the Gateway request (for logging purposes).'
+          default: ''
+        stream_id:
+          type: string
+          title: Stream Id
+          description: The Stream ID (for logging purposes).
+          default: ''
       type: object
       required:
       - subscribe_url
@@ -1052,6 +1062,11 @@ components:
           type: string
           title: Events Url
           description: URL for subscribing to events for pipeline status and logs
+          default: ''
+        request_id:
+          type: string
+          title: Request Id
+          description: The ID generated for this request
           default: ''
       type: object
       required:
